2006-05-20  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/libnrtype/FontInstance.cpp: patch from David Turner of the
	  FreeType Project.  Fixes a compilation problem and a possible
	  segmentation fault.

2006-05-18  Jon A. Cruz  <jon@joncruz.org>
	* src/layer-manager.cpp, src/dialogs/layers-panel.h,
	  src/dialogs/layers-panel.cpp:
	  Next round of layer dialog updates.

2006-05-17  Kees Cook  <kees@outflux.net>
	* src/dialogs/rdf.cpp: corrected localization on array, added comments.
	* src/ui/widget/licensor.cpp: Localized the license name.
	* configure.ac: added comment about why sigc++ was upgraded

2006-05-17  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/layers-panel.cpp:
	  Flipped top/bottom in layers UI to reflect visible stacking.

2006-05-16  verbalshadow  <verbalshadow@gmail.com>

	* src/desktop-style.h, src/desktop-style.cpp:
	  Fixes calligraphy tool so drawing now uses the the correct opacity.

2006-05-17  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/layers-panel.cpp, src/dialogs/layers-panel.h:
	  Switched icons to stock generic.

2006-05-17  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/dialogs/layers-panel.cpp: Compile fix from Mathieu Dimanche.

2006-05-16  Jon A. Cruz  <jon@joncruz.org>

	* src/document-subset.cpp:
	  Corrected ordering of children in subset.

2006-05-15  Jon A. Cruz  <jon@joncruz.org>
	* src/Makefile_insert, src/desktop.cpp, src/desktop.h,
	  src/layer-manager.cpp, src/menus-skeleton.h, src/verbs.cpp,
	  src/verbs.h, src/dialogs/layers-panel.cpp,
	  src/dialogs/layers-panel.h, src/dialogs/Makefile_insert:
	  Base implementation of a layers dialog.

2006-05-14  Colin Marquardt  <colin@marquardt-home.de>

	* src/ui/dialog/inkscape-preferences.cpp (initPageTools): 
	  Typofix ("conector").

2006-05-14  Jon A. Cruz  <jon@joncruz.org>

	* src/document-subset.cpp, src/layer-manager.h, src/layer-manager.cpp:
	  Corrected base structure and avoiding infinite loop.
